[package]
name = "test-parachain-undying-collator"
version = "0.9.23"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Collator for the undying test parachain"
edition = "2021"

[[bin]]
name = "undying-collator"
path = "src/main.rs"

[[bin]]
name = "undying_collator_puppet_worker"
path = "bin/puppet_worker.rs"

[dependencies]
parity-scale-codec = { version = "3.1.2", default-features = false, features = ["derive"] }
clap = { version = "3.1", features = ["derive"] }
futures = "0.3.19"
futures-timer = "3.0.2"
log = "0.4.17"

test-parachain-undying = { path = ".." }
polkadot-primitives = { git = "https://github.com/dhiway/polkadot", branch = "polkadot-v0.9.23" }
cord-cli = { path = "../../../../cli" }
cord-service = { path = "../../../../node/service" }
polkadot-node-primitives = { git = "https://github.com/dhiway/polkadot", branch = "polkadot-v0.9.23" }
polkadot-node-subsystem = { git = "https://github.com/dhiway/polkadot", branch = "polkadot-v0.9.23" }

sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }

# This one is tricky. Even though it is not used directly by the collator, we still need it for the
# `puppet_worker` binary, which is required for the integration test. However, this shouldn't be
# a big problem since it is used transitively anyway.
polkadot-node-core-pvf  = { git = "https://github.com/dhiway/polkadot", branch = "polkadot-v0.9.23" }

[dev-dependencies]
cord-parachain = { path = "../../.." }
polkadot-test-service = { git = "https://github.com/dhiway/polkadot", branch = "polkadot-v0.9.23" }

substrate-test-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }

tokio = { version = "1.18", features = ["macros"] }
